# McPatch

./: .gitignore  CMakeLists.txt  README.md  main.cpp  patches.json  sdk.json
src/Form/: FormMenu.hpp
src/SDK/: SDK.hpp
src/Utils/: Game.h  Internet.h  Logger.h
src/utils/: Game.h  Logger.h
